# havhav

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: code-quality.yaml  codeql-analysis.yml  pre-commit-auto-update.yml  release.yaml  test.yaml
docs/: conf.py  index.rst  requirements.txt
docs/source/: conf.py
havhav/: __init__.py  handler.py  main.py  models.py
tests/: test_dog_api.py  test_main.py
