[tool.poetry]
name = "havhav"
version = "0.1.0"
description = ""
authors = ["tugrulcansollu <tugrulcansollu@gmail.com>"]
packages = [
    { include = "havhav" },
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.1"
requests-toolbelt = "^0.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
bandit = "^1.7.4"
safety = "^1.10.3"
setuptools = "^62.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
)/
'''
