[tool.poetry]
name = "havhav"
version = "0.1.3"
description = ""
authors = ["tugrulcansollu <tugrulcansollu@gmail.com>"]
packages = [
    { include = "havhav" },
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.1"
requests-toolbelt = "^0.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
bandit = "^1.7.4"
safety = "^2.3.1"
setuptools = "^65.5.0"

[tool.poetry.scripts]
havhav = "havhav.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
)/
'''
