[metadata]
name = havhav
version = file: havhav/_version.txt
description = Pet project to test package sharing on PyPI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tugrulcan/havhav
author = Tugrul Can Söllü
author_email = tugrulcansollu+havhav@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
keywords = python, package, sharing, pypi
platform = any
project_urls =
    Bug Tracker = https://github.com/tugrulcan/havhav/issues
    Changelog = https://github.com/tugrulcan/havhav/blob/master/CHANGELOG.md

[options]
python_requires = >=3.8

[options.package_data]
staket = py.typed, _version.txt, *.pyi

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if False
    @abc.abstractmethod
    @abc.abstractproperty
    raise NotImplementedError
    return NotImplemented

[coverage:run]
omit = []

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions

[flake8]
exclude = .tox, .git, .eggs, __pycache__, tests/, docs/, build/, dist/
doctests = True
enable_extensions = T001
max-complexity = 18
select = B,C,E,F,W,T4,B9
ignore = W503, B008, B902
max-line-length = 79
extend-ignore = E203
per-file-ignores = havhav/__init__.py:F401

[mypy]
disallow_untyped_defs = True
no_implicit_optional = True
check_untyped_defs = True
warn_return_any = True
warn_unused_ignores = True
show_error_codes = True
disallow_any_generics = True
disallow_subclassing_any = False
disallow_untyped_calls = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*
addopts =
    -ra
    --strict-markers
    -p pytester

[tool:isort]
profile = black
force_single_line = False
line_length = 79
known_first_party = pytest_cov
default_section = THIRDPARTY
forced_separate = test_pytest_cov
skip = .tox,.eggs,ci/templates,build,dist
lines_between_types = 1
combine_as_imports = true

[pycln]
expand_stars = True
verbose = True
all = True
no_gitignore = False

[bandit]
exclude = /tests/,/docs/,/build/,/dist/
